[ASV-1395] Added view related to appview wallet promotion;

--- a/app/src/main/res/layout/fragment_app_view.xml
+++ b/app/src/main/res/layout/fragment_app_view.xml
@@ -6,9 +6,9 @@
     android:id="@+id/coordinator_layout_appview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:descendantFocusability="blocksDescendants"
     android:orientation="vertical"
-    android:background="@color/white"
     >
 
   <include
@@ -274,6 +274,13 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="8dp"
             />
+
+        <include
+            layout="@layout/appview_wallet_promotion_install_layout"
+            android:id="@+id/wallet_install_promotion"
+            android:visibility="gone"
+            />
+
         <include
             layout="@layout/appview_app_versions_layout"
             android:id="@+id/versions_layout"
