--- a/app/src/main/res/drawable/appc_gradient_translucent.xml
+++ b/app/src/main/res/drawable/appc_gradient_translucent.xml
@@ -2,8 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
   <gradient
-      android:endColor="#fc9d48"
-      android:startColor="#ff578c"
+      android:endColor="#1Aff578c"
+      android:startColor="#1Afc9d48"
       />
   <corners android:radius="4dp"/>
 </shape>
